client/css/jukebox.scss
/* ... */
.tab__nav .login-block__error {
	position: absolute;
	margin-left: 20px;
	transform: translateX(100%);
	width: 100px;
}

.tab__nav .login-block__error::before {
	position: absolute;
	content: '';
	display: block;
	width: 5px;
	height: 5px;
	border-radius: 100%;
	background-color: #f00;
	top: 50%;
	opacity: 1;
	margin-left: -15px;
	animation: blink-animation 1s infinite;
}

.tab__nav .login-block__error p {
	margin-bottom: 0;
}

@media screen and (max-width: 767px) {
	.login-block {
		background: #f7f7f7;
		z-index: 2;
		border-bottom: 1px solid #eee;
		padding: 10px 15px;
		display: flex;
		justify-content: space-between;
		align-items: center;
	}

	.container {
		margin: 0;
		padding: 20px 15px;
		width: 100%;
	}

	.tab__nav {
		&--mobile-no-pd {
			padding: 0;
		}

		&__container {
			margin: 0 0 2rem 0;
			width: 100%;
			z-index: 1;
		}

		&__list {
			width: auto;
		}
	}
}

@media screen and (min-width: 767px) {
	.tab {
		padding-top: 0;
	}

	.tab__nav {
		z-index: 2;
		background-color: $color-01;
		border-bottom: 1px solid rgba(0, 0, 0, 0.1);
		padding-top: 70px;

		&__container {
			display: flex;
		}

		&__playlist {
			position: static;
			margin-bottom: 0;
			display: flex;
			flex-flow: wrap;
			flex: 1;
			background-color: transparent;
			z-index: 1;
		}

		&__login-outter {
			position: relative;
			display: flex;
			justify-content: space-evenly;
			align-items: center;
		}

		&__login-btn {
			padding: 15px;
			transition: all 0.5s;

			& a {
				color: #000;
				opacity: 0.5;
				text-decoration: underline;
			}

			&:hover {
				background-color: #f5f5f5;

				& a {
					opacity: 1;
				}
			}
		}

		&__list-item {
			text-align: left;

			// &:first-child {
			// 	padding-left: 0;
			// }

			&:hover {
				background-color: #f5f5f5;

				& a {
					opacity: 1;
				}
			}
		}
	}
}

/* =============================================
=          AppBody/Content                     =
============================================= */

.app-body__container {
	padding-top: 55px;
}

.songs__list {
	&__player-info {
		width: 70px;
		display: flex;
		align-items: center;
		justify-content: flex-end;
		position: absolute;
		top: 50%;
		right: 100%;
		height: 100%;
		transform: translate3d(0, -50%, 0);
		overflow: hidden;
	}
}

.songs__list-item-wrapper {
	position: relative;
	list-style: none;
	border-bottom: 1px solid #eee;
	margin-bottom: 2.4rem;

	& .playlist__item__active {
		opacity: 1;
		color: brown;
		font-weight: bold;
	}

	& .playlist__item__active-host {
		font-size: 30px;
		left: 5px;
	}
}

.songs__list-item {
	position: relative;
	margin: 0;
	background-color: $color-01;

	&__container {
		display: flex;
		align-items: center;
		width: 100%;
	}

	&__left {
		position: relative;
	}

	&__right {
		position: relative;
		justify-content: flex-end;
	}

	&__thumbnail {
		display: flex;
		position: relative;
		width: 40px;

		& img {
			width: 40px;
			height: 40px;
		}

		&--link {
			display: flex;
		}

		&--sc::after {
			background-image: url(/logo-soundcloud.png);
		}

		&--nct::after {
			background-image: url(/logo-nct.png);
		}

		&--zing::after {
			background-image: url(/logo-zing.png);
		}

		&--yt::after {
			background-image: url(/logo-youtube.png);
		}

		&--link::after {
			content: '';
			position: absolute;
			bottom: 0;
			left: 0;
			width: 100%;
			height: 100%;
			background-size: auto 10px;
			background-repeat: no-repeat;
			background-position: left bottom;
		}
	}

	&__name {
		text-overflow: ellipsis;
		white-space: nowrap;
		overflow: hidden;
		margin-left: 15px;

		&--link {
			color: black;
			font-size: 14px;

			&:hover {
				text-decoration: none;
			}
		}
	}

	&__control {
		display: flex;
		align-items: center;

		& span {
			padding: 2px 10px;

			&:first-child {
				padding-left: 0;
			}
		}
	}

	&__icon {
		cursor: pointer;
		color: gray;
		transition: all 0.4s;
	}

	&__playing-wrapper {
		width: 20px;
		height: 100%;
		display: flex;
		align-items: center;
		justify-content: center;
	}

	&__author {
		line-height: 0.9;
		z-index: 1;
		font-size: 12.5px;

		&--mobile {
			font-size: 12.5px;
			position: absolute;
			left: 0;
		}
	}

	&__time {
		white-space: nowrap;
	}
}

@media screen and (min-width: 480px) {
	.songs__list-item {

		&__container {
			width: auto;
		}

		&__left {
			padding-left: 0;
		}
	}
}
/* ... */

